# HoovHealth

./: README.md
hoov_health/: README.md  pubspec.yaml
hoov_health/android/app/: build.gradle
hoov_health/data/: bluetooth.json  os_version.json  port_info.json  running_apps.json  system_info.json  wifi_info.json
hoov_health/ios/Runner/: Info.plist
hoov_health/ios/Runner.xcodeproj/: project.pbxproj
hoov_health/lib/: dashboard.dart  dashboard_sidebar.dart  main.dart
hoov_health/lib/backend/: applications.dart  bluetooth.dart  load_data.dart  os.dart  state.dart  system_info.dart  tips.dart
hoov_health/lib/bluetooth/: bluetooth_page.dart
hoov_health/lib/dashboard/: metric_health_widget.dart  overall_health_widget.dart
hoov_health/lib/pages/: applications.dart  bluetooth_page.dart  dashboard.dart  network.dart  system.dart
hoov_health/lib/scans/: system.dart  wifi.dart
hoov_health/linux/: CMakeLists.txt  my_application.cc
hoov_health/macos/Flutter/: GeneratedPluginRegistrant.swift
hoov_health/macos/Runner/: AppDelegate.swift  MainFlutterWindow.swift  Runner-Bridging-Header.h  WifiInfo.h  WifiInfo.m  processes.h  processes.m  system_info.h  system_info.m
hoov_health/macos/Runner.xcodeproj/: project.pbxproj
hoov_health/os_scan/: .metadata  README.md  ffigen.yaml  pubspec.yaml
hoov_health/os_scan/example/: README.md  pubspec.yaml
hoov_health/os_scan/src/: CMakeLists.txt  os_scan.c
hoov_health/osquery/: parse.py  scan.py
hoov_health/test/: widget_test.dart
hoov_health/web/: index.html  manifest.json
hoov_health/windows/: CMakeLists.txt
(+16 files in other folders)
